# agent-naomi

./: .cookiecutter.json  .gitignore  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  environment.yml  noxfile.py  pyproject.toml  todo.txt
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
data/input/: example.txt  example.yaml
data/user/: active_session.db
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
scripts/: train.py
src/agentNaomi/: __init__.py  __main__.py  utils.py
src/agentNaomi/models/: __init__.py  layers.py  models.py
src/agentNaomi/pipeline/: __init__.py  data.py  data_utils.py
