[tool.poetry]
name = "agent-naomi"
version = "0.0.0"
description = "Agent Naomi integrates retained contextual informations from embeddings of large language models (LLM) with adaptive learning algorithms to update and score long text sequences answers for question-answering tasks according to input preferences."
authors = ["Mimi Phan <phan.mimi@outlook.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mimipynb/AgentNaomi"
repository = "https://github.com/mimipynb/AgentNaomi"
documentation = "https://AgentNaomi.readthedocs.io"
packages = [
    { include = "agentNaomi", from = "src" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/mimipynb/AgentNaomi/releases"

[tool.poetry.scripts]
agent-naomi = "agentNaomi.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "^8.0.1"
palettable = "^3.3.0"
wandb = "^0.12.2"
torchinfo = "^1.5.3"
pytorch-lightning = "^1.5.1"
ipython = "^7.28.0"
torch = "^1.10.0"
torchvision = "^0.11.0"
python-dotenv = "^1.0.1"
lightning-sdk = "^0.1.41"
joblib = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
sphinx = "^4.1.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
sphinx-click = "^3.0.1"
Pygments = "^2.9.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["agentNaomi"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
